methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (vuBiscuit=0){
                  ^MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (vuBiscuit=0){
  ^